<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.DiagnosticFragment">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:padding="10dp"
        android:layout_height="match_parent">
        <TextView
            android:text="@string/diagnostic_title"
            android:theme="@style/style_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <ImageView
            android:src="@drawable/menu_technicien"
            android:layout_width="match_parent"
            android:scaleType="fitXY"
            android:layout_height="340dp" />
        <TextView
            android:text="@string/diagnostic_title1"
            android:theme="@style/style_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/diagnostic_text"
            android:theme="@style/style_text_default"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/diagnostic_title2"
            android:theme="@style/style_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/diagnostic_text1"
            android:theme="@style/style_text_default"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/diagnostic_title3"
            android:theme="@style/style_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/diagnostic_text2"
            android:theme="@style/style_text_default"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:elevation="10dp"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <ImageView
                    android:src="@drawable/tdr"
                    android:layout_width="match_parent"
                    android:scaleType="centerCrop"
                    android:layout_height="200dp"
                    android:layout_weight="2"/>
                <TextView
                    android:layout_width="match_parent"
                    android:padding="5dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/cardview_text_color"
                    android:text="@string/diagnostic_text3"
                    android:layout_weight="1" />
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>