<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.SoignerFragment">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:padding="10dp"
        android:layout_height="match_parent">
        <ImageView
            android:src="@drawable/vaccin"
            android:layout_width="match_parent"
            android:scaleType="centerCrop"
            android:layout_height="250dp" />
        <TextView
            android:text="@string/soigner_title"
            android:theme="@style/style_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/soigner_text_1"
            android:theme="@style/style_text_default"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:elevation="10dp"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <ImageView
                    android:src="@drawable/artemisia_annua"
                    android:layout_width="match_parent"
                    android:scaleType="centerCrop"
                    android:layout_height="120dp"
                    android:layout_weight="2"/>
                <TextView
                    android:layout_width="match_parent"
                    android:padding="5dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/cardview_text_color"
                    android:text="@string/soigner_text_2"
                    android:layout_weight="1" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <TextView
            android:text="@string/soigner_text_3"
            android:theme="@style/style_text_default"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>